--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | \
                docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
-          docker build -t $IMAGE:${{ github.sha }} -t $IMAGE:latest HealthyRemote/
+          docker build -t $IMAGE:${{ github.sha }} -t $IMAGE:latest .
           docker push $IMAGE:${{ github.sha }}
           docker push $IMAGE:latest
 
